examples/good/01_basic_types.xd
int main() {
    int a;
    string b;
    bool c;

    yeet 0;
}
