examples/bad/division_by_zero.xd
int main() {
    yeet 5 / 0;
}